Minor fixes to question bank
- Removed parentheses around "Select all that apply" in multiple choice questions.

--- a/question_bank/lab01/mchoice_05.Rmd
+++ b/question_bank/lab01/mchoice_05.Rmd
@@ -1,6 +1,6 @@
 Question
 ========
-For `x <- c(10, 20, 30)`, which expressions return **20**? (Select all that apply)
+For `x <- c(10, 20, 30)`, which expressions return **20**? Select all that apply.
 
 Answerlist
 ----------
